--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,166 @@
 @import "tailwindcss";
+@import "tw-animate-css";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@custom-variant dark (&:is(.dark *));
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-sans: Inter, sans-serif;
+  --font-mono: IBM Plex Mono, monospace;
+  --color-sidebar-ring: var(--sidebar-ring);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar: var(--sidebar);
+  --color-chart-5: var(--chart-5);
+  --color-chart-4: var(--chart-4);
+  --color-chart-3: var(--chart-3);
+  --color-chart-2: var(--chart-2);
+  --color-chart-1: var(--chart-1);
+  --color-ring: var(--ring);
+  --color-input: var(--input);
+  --color-border: var(--border);
+  --color-destructive: var(--destructive);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-accent: var(--accent);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-muted: var(--muted);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-secondary: var(--secondary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-primary: var(--primary);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-popover: var(--popover);
+  --color-card-foreground: var(--card-foreground);
+  --color-card: var(--card);
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+  --font-serif: Source Serif 4, serif;
+  --radius: 0.375rem;
+  --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
+  --tracking-tight: calc(var(--tracking-normal) - 0.025em);
+  --tracking-wide: calc(var(--tracking-normal) + 0.025em);
+  --tracking-wider: calc(var(--tracking-normal) + 0.05em);
+  --tracking-widest: calc(var(--tracking-normal) + 0.1em);
+  --tracking-normal: var(--tracking-normal);
+  --shadow-2xl: var(--shadow-2xl);
+  --shadow-xl: var(--shadow-xl);
+  --shadow-lg: var(--shadow-lg);
+  --shadow-md: var(--shadow-md);
+  --shadow: var(--shadow);
+  --shadow-sm: var(--shadow-sm);
+  --shadow-xs: var(--shadow-xs);
+  --shadow-2xs: var(--shadow-2xs);
+  --color-destructive-foreground: var(--destructive-foreground);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+:root {
+  --radius: 0.375rem;
+  --background: oklch(0.98 0 0);
+  --foreground: oklch(0.21 0.03 264.67);
+  --card: oklch(1.00 0 0);
+  --card-foreground: oklch(0.21 0.03 264.67);
+  --popover: oklch(1.00 0 0);
+  --popover-foreground: oklch(0.21 0.03 264.67);
+  --primary: oklch(0.48 0.20 260.48);
+  --primary-foreground: oklch(1.00 0 0);
+  --secondary: oklch(0.97 0.00 264.70);
+  --secondary-foreground: oklch(0.37 0.03 259.73);
+  --muted: oklch(0.97 0.00 264.70);
+  --muted-foreground: oklch(0.55 0.02 264.37);
+  --accent: oklch(0.95 0.02 261.78);
+  --accent-foreground: oklch(0.48 0.20 260.48);
+  --destructive: oklch(0.58 0.22 27.33);
+  --border: oklch(0.93 0.01 264.60);
+  --input: oklch(0.93 0.01 264.60);
+  --ring: oklch(0.48 0.20 260.48);
+  --chart-1: oklch(0.48 0.20 260.48);
+  --chart-2: oklch(0.56 0.24 260.95);
+  --chart-3: oklch(0.40 0.16 259.09);
+  --chart-4: oklch(0.43 0.16 259.85);
+  --chart-5: oklch(0.29 0.07 260.37);
+  --sidebar: oklch(0.97 0.00 264.70);
+  --sidebar-foreground: oklch(0.21 0.03 264.67);
+  --sidebar-primary: oklch(0.48 0.20 260.48);
+  --sidebar-primary-foreground: oklch(1.00 0 0);
+  --sidebar-accent: oklch(0.95 0.02 261.78);
+  --sidebar-accent-foreground: oklch(0.48 0.20 260.48);
+  --sidebar-border: oklch(0.93 0.01 264.60);
+  --sidebar-ring: oklch(0.48 0.20 260.48);
+  --destructive-foreground: oklch(1.0000 0 0);
+  --font-sans: Inter, sans-serif;
+  --font-serif: Source Serif 4, serif;
+  --font-mono: IBM Plex Mono, monospace;
+  --shadow-2xs: 0px 4px 8px -1px hsl(0 0% 0% / 0.05);
+  --shadow-xs: 0px 4px 8px -1px hsl(0 0% 0% / 0.05);
+  --shadow-sm: 0px 4px 8px -1px hsl(0 0% 0% / 0.10), 0px 1px 2px -2px hsl(0 0% 0% / 0.10);
+  --shadow: 0px 4px 8px -1px hsl(0 0% 0% / 0.10), 0px 1px 2px -2px hsl(0 0% 0% / 0.10);
+  --shadow-md: 0px 4px 8px -1px hsl(0 0% 0% / 0.10), 0px 2px 4px -2px hsl(0 0% 0% / 0.10);
+  --shadow-lg: 0px 4px 8px -1px hsl(0 0% 0% / 0.10), 0px 4px 6px -2px hsl(0 0% 0% / 0.10);
+  --shadow-xl: 0px 4px 8px -1px hsl(0 0% 0% / 0.10), 0px 8px 10px -2px hsl(0 0% 0% / 0.10);
+  --shadow-2xl: 0px 4px 8px -1px hsl(0 0% 0% / 0.25);
+  --tracking-normal: 0em;
+}
+
+.dark {
+  --background: oklch(0.26 0.03 262.71);
+  --foreground: oklch(0.93 0.01 264.60);
+  --card: oklch(0.30 0.03 261.75);
+  --card-foreground: oklch(0.93 0.01 264.60);
+  --popover: oklch(0.30 0.03 261.75);
+  --popover-foreground: oklch(0.93 0.01 264.60);
+  --primary: oklch(0.56 0.24 260.95);
+  --primary-foreground: oklch(1.00 0 0);
+  --secondary: oklch(0.35 0.04 262.16);
+  --secondary-foreground: oklch(0.93 0.01 264.60);
+  --muted: oklch(0.30 0.03 261.75);
+  --muted-foreground: oklch(0.71 0.02 261.33);
+  --accent: oklch(0.33 0.04 264.82);
+  --accent-foreground: oklch(0.93 0.01 264.60);
+  --destructive: oklch(0.64 0.21 25.33);
+  --border: oklch(0.35 0.04 262.16);
+  --input: oklch(0.35 0.04 262.16);
+  --ring: oklch(0.56 0.24 260.95);
+  --chart-1: oklch(0.56 0.24 260.95);
+  --chart-2: oklch(0.48 0.20 260.48);
+  --chart-3: oklch(0.69 0.17 256.00);
+  --chart-4: oklch(0.43 0.16 259.85);
+  --chart-5: oklch(0.29 0.07 260.37);
+  --sidebar: oklch(0.26 0.03 262.71);
+  --sidebar-foreground: oklch(0.93 0.01 264.60);
+  --sidebar-primary: oklch(0.56 0.24 260.95);
+  --sidebar-primary-foreground: oklch(1.00 0 0);
+  --sidebar-accent: oklch(0.33 0.04 264.82);
+  --sidebar-accent-foreground: oklch(0.93 0.01 264.60);
+  --sidebar-border: oklch(0.35 0.04 262.16);
+  --sidebar-ring: oklch(0.56 0.24 260.95);
+  --destructive-foreground: oklch(1.0000 0 0);
+  --radius: 0.375rem;
+  --font-sans: Inter, sans-serif;
+  --font-serif: Source Serif 4, serif;
+  --font-mono: IBM Plex Mono, monospace;
+  --shadow-2xs: 0px 4px 8px -1px hsl(0 0% 0% / 0.05);
+  --shadow-xs: 0px 4px 8px -1px hsl(0 0% 0% / 0.05);
+  --shadow-sm: 0px 4px 8px -1px hsl(0 0% 0% / 0.10), 0px 1px 2px -2px hsl(0 0% 0% / 0.10);
+  --shadow: 0px 4px 8px -1px hsl(0 0% 0% / 0.10), 0px 1px 2px -2px hsl(0 0% 0% / 0.10);
+  --shadow-md: 0px 4px 8px -1px hsl(0 0% 0% / 0.10), 0px 2px 4px -2px hsl(0 0% 0% / 0.10);
+  --shadow-lg: 0px 4px 8px -1px hsl(0 0% 0% / 0.10), 0px 4px 6px -2px hsl(0 0% 0% / 0.10);
+  --shadow-xl: 0px 4px 8px -1px hsl(0 0% 0% / 0.10), 0px 8px 10px -2px hsl(0 0% 0% / 0.10);
+  --shadow-2xl: 0px 4px 8px -1px hsl(0 0% 0% / 0.25);
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
   }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  body {
+    @apply bg-background text-foreground;
+    letter-spacing: var(--tracking-normal);
+  }
 }
